// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <p>
     Viewing 
    1
     
    expense
     totaling 
    $1.95
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <p>
     Viewing 
    23
     
    expenses
     totaling 
    $341,473,572.94
  </p>
</div>
`;
